[package]
name = "session"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
session-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
session-io.workspace = true

[dev-dependencies]
gtest.workspace = true
session-io.workspace = true
